--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,6 +8,22 @@ body {
 	height: 100%;
 }
 
+.bg-video {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	z-index: -1;
+}
+
+video {
+	min-width: 100%;
+	min-height: 100%;
+	object-fit: cover;
+}
+
 header {
 	display: flex;
 	justify-content: center;
@@ -31,6 +47,7 @@ header {
 	height: 100%;
 	width: 100%;
 	background-color: rgba(0, 0, 0, 0.7);
+	z-index: 9;
 }
 
 main {
@@ -74,6 +91,7 @@ main {
 	height: 400px;
 	border-radius: 20px;
 	color: black;
+	z-index: 10;
 }
 
 .lose-display > button {
@@ -96,9 +114,8 @@ main {
 
 .cards {
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: repeat(2, 1fr);
-	gap: 20px;
+	grid-template-columns: repeat(5, 1fr);
+	gap: 30px;
 	place-items: center;
 }
 
@@ -106,10 +123,27 @@ main {
 	background-color: white;
 	border-radius: 10px;
 	overflow: hidden;
-	width: 200px;
-	height: 300px;
+	width: 300px;
+	height: 400px;
 	background-size: cover;
 	background-position: center center;
+}
+
+.animate {
+	animation: animate-card 0.4s ease-in-out;
+}
+
+@keyframes animate-card {
+	0%,
+	100% {
+		transform: translate(0, 0) rotate(0deg) scale(1);
+	}
+	33% {
+		transform: translate(-3px, -3px) rotate(-10deg) scale(1.05);
+	}
+	66% {
+		transform: translate(3px, -3px) rotate(10deg) scale(1.05);
+	}
 }
 
 .card-image {
@@ -124,7 +158,7 @@ footer {
 	justify-content: center;
 	align-items: center;
 	gap: 10px;
-	padding: 10px;
+	padding: 15px;
 }
 
 footer > a {
